- Agrega toda la lógica de carrito + modificaciones en consulta ArticuloImp GetArticulos (). + comentarios con advertencias
- Agrega referencias del csproj

NOTA: corregir las consultas de imagen y ArticuloImp ! El programa no compila en ésta instancia ( ! )

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Articulo\ArticuloBussines.cs" />
+    <Compile Include="Articulo\ArticuloBusiness.cs" />
     <Compile Include="Categoria\CategoriaBusiness.cs" />
     <Compile Include="Marca\MarcaBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
