--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Categoria\CategoriaBusiness.cs" />
     <Compile Include="Marca\MarcaBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario\UsuarioBusiness.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dao\Dao.csproj">
