--- a/Dao/Dao.csproj
+++ b/Dao/Dao.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Implements\ArticuloImp.cs" />
     <Compile Include="Implements\CategoriaImp.cs" />
     <Compile Include="Implements\MarcaImp.cs" />
+    <Compile Include="Implements\UsuarioImp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
