--- a/Dao/Dao.csproj
+++ b/Dao/Dao.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccess\DataAccess.cs" />
+    <Compile Include="Encrypts\Encrypt.cs" />
     <Compile Include="Implements\ArticuloImp.cs" />
     <Compile Include="Implements\CategoriaImp.cs" />
     <Compile Include="Implements\MarcaImp.cs" />
