--- a/TpFinalEquipo29/TpFinalEquipo29.csproj
+++ b/TpFinalEquipo29/TpFinalEquipo29.csproj
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Articulo.aspx" />
+    <Content Include="ArticuloAgregar.aspx" />
     <Content Include="Categoria.aspx" />
     <Content Include="Carrito.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -201,6 +202,13 @@
     </Compile>
     <Compile Include="Articulo.aspx.designer.cs">
       <DependentUpon>Articulo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ArticuloAgregar.aspx.cs">
+      <DependentUpon>ArticuloAgregar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ArticuloAgregar.aspx.designer.cs">
+      <DependentUpon>ArticuloAgregar.aspx</DependentUpon>
     </Compile>
     <Compile Include="Categoria.aspx.cs">
       <DependentUpon>Categoria.aspx</DependentUpon>
