--- a/TpFinalEquipo29/TpFinalEquipo29.csproj
+++ b/TpFinalEquipo29/TpFinalEquipo29.csproj
@@ -128,6 +128,7 @@
     <Content Include="Default.aspx" />
     <Content Include="DetalleArticulos.aspx" />
     <Content Include="Direccion.aspx" />
+    <Content Include="EditarCompleto.aspx" />
     <Content Include="Estadistica.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Gestion.aspx" />
@@ -264,6 +265,13 @@
     </Compile>
     <Compile Include="Direccion.aspx.designer.cs">
       <DependentUpon>Direccion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EditarCompleto.aspx.cs">
+      <DependentUpon>EditarCompleto.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EditarCompleto.aspx.designer.cs">
+      <DependentUpon>EditarCompleto.aspx</DependentUpon>
     </Compile>
     <Compile Include="Estadistica.aspx.cs">
       <DependentUpon>Estadistica.aspx</DependentUpon>
