--- a/TpFinalEquipo29/TpFinalEquipo29.csproj
+++ b/TpFinalEquipo29/TpFinalEquipo29.csproj
@@ -139,6 +139,7 @@
     <Content Include="miCuenta.aspx" />
     <Content Include="ModificarMail.aspx" />
     <Content Include="Pagos.aspx" />
+    <Content Include="ProcesandoPedido.aspx" />
     <Content Include="Registro.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -332,6 +333,13 @@
     </Compile>
     <Compile Include="Pagos.aspx.designer.cs">
       <DependentUpon>Pagos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ProcesandoPedido.aspx.cs">
+      <DependentUpon>ProcesandoPedido.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ProcesandoPedido.aspx.designer.cs">
+      <DependentUpon>ProcesandoPedido.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registro.aspx.cs">
