- Se agrega la pagina de detalle de compra

--- a/TpFinalEquipo29/TpFinalEquipo29.csproj
+++ b/TpFinalEquipo29/TpFinalEquipo29.csproj
@@ -127,6 +127,7 @@
     <Content Include="DatosPersonales.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="DetalleArticulos.aspx" />
+    <Content Include="DetalleCompra.aspx" />
     <Content Include="EditarCompleto.aspx" />
     <Content Include="EditarDireccion.aspx" />
     <Content Include="Estadistica.aspx" />
@@ -263,6 +264,13 @@
     </Compile>
     <Compile Include="DetalleArticulos.aspx.designer.cs">
       <DependentUpon>DetalleArticulos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DetalleCompra.aspx.cs">
+      <DependentUpon>DetalleCompra.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DetalleCompra.aspx.designer.cs">
+      <DependentUpon>DetalleCompra.aspx</DependentUpon>
     </Compile>
     <Compile Include="EditarCompleto.aspx.cs">
       <DependentUpon>EditarCompleto.aspx</DependentUpon>
