se agrega ver Historial de pedidos de un usuario y se modifica carrito.

--- a/TpFinalEquipo29/TpFinalEquipo29.csproj
+++ b/TpFinalEquipo29/TpFinalEquipo29.csproj
@@ -125,7 +125,7 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="DatosPersonales.aspx" />
-    <Content Include="DatosTarjeta.aspx" />
+    <Content Include="MisPedidos.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="DetalleArticulos.aspx" />
     <Content Include="DetalleCompra.aspx" />
@@ -252,12 +252,12 @@
     <Compile Include="DatosPersonales.aspx.designer.cs">
       <DependentUpon>DatosPersonales.aspx</DependentUpon>
     </Compile>
-    <Compile Include="DatosTarjeta.aspx.cs">
-      <DependentUpon>DatosTarjeta.aspx</DependentUpon>
+    <Compile Include="MisPedidos.aspx.cs">
+      <DependentUpon>MisPedidos.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="DatosTarjeta.aspx.designer.cs">
-      <DependentUpon>DatosTarjeta.aspx</DependentUpon>
+    <Compile Include="MisPedidos.aspx.designer.cs">
+      <DependentUpon>MisPedidos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
