--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Articulo\ArticuloBusiness.cs" />
     <Compile Include="Categoria\CategoriaBusiness.cs" />
     <Compile Include="Marca\MarcaBusiness.cs" />
+    <Compile Include="MetodoPago\MetodoPagoBusiness.cs" />
     <Compile Include="Pedido\PedidoBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario\UsuarioBusiness.cs" />
